--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NextJS app to Adriana Ferreira's website",
   "main": "index.js",
   "dependencies": {
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^5.0.0",
     "node-fetch": "^2.1.1",
     "react": "^16.2.0",
